@@ -181,6 +181,7 @@ b bugfix
               + gate/copydot
               + examples/werner_states
               + examples/magic_state_distillation
+              + utils/superop_to_choi
               * utils/unravel_index works on vectors of indices
               * utils/tensorbasis returns the integer locality of each element
               * seq/*: sign convention changed
